The CSS used for middlethumb class for filmstrip was not working. Fixed it (related to thread 48803)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4108 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/rainy_day/style.css
+++ b/cpg1.5.x/themes/rainy_day/style.css
@@ -467,10 +467,6 @@ a:hover {
         margin: 2px;
 }
 
-img.middlethumb {
-    border: 5px solid blue;
-}
-
 /* pseudo-classes for image links */
 a:link .image{
         border-style: solid;
@@ -505,6 +501,11 @@ a:active .image{
         border-width:1px;
         border-color: #000000;
         margin: 2px;
+}
+
+/* pseudo-classes for middlethumb links */
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
+		border: 5px solid blue;
 }
 
 .imageborder {
