--- a/cpg1.5.x/themes/eyeball/style.css
+++ b/cpg1.5.x/themes/eyeball/style.css
@@ -115,6 +115,10 @@ a:active .image{
         border-color:#FFFFFF;
 }
 
+/* pseudo-classes for middlethumb links */
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
+		border: 5px solid blue;
+}
 
 .imageborder {
     border: 1px solid #000000;
@@ -593,10 +597,6 @@ a:hover {
 
 .image {
         margin: 2px;
-}
-
-img.middlethumb {
-    border: 5px solid blue;
 }
 
 .display_media {
