--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -489,10 +489,6 @@ a:hover.yebg {
         margin: 2px;
 }
 
-img.middlethumb {
-    border: 5px solid blue;
-}
-
 /* pseudo-classes for image links */
 a:link .image{
         border-style: solid;
@@ -527,6 +523,11 @@ a:active .image{
         border-width:1px;
         border-color: #000000;
         margin: 2px;
+}
+
+/* pseudo-classes for middlethumb links */
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
+		border: 5px solid blue;
 }
 
 .imageborder {
