--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -491,10 +491,6 @@ a:hover {
         margin: 2px;
 }
 
-img.middlethumb {
-    border: 5px solid blue;
-}
-
 /* pseudo-classes for image links */
 a:link .image{
         border-style: solid;
@@ -531,6 +527,10 @@ a:active .image{
         margin: 2px;
 }
 
+/* pseudo-classes for middlethumb links */
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
+		border: 5px solid blue;
+}
 
 .imageborder {
         border: 1px solid #000000;
