--- a/cpg1.5.x/themes/igames/style.css
+++ b/cpg1.5.x/themes/igames/style.css
@@ -73,6 +73,7 @@ a:visited .image { border: 1px solid #BDBEBD; }
 a:focus .image { border: 1px solid #000000; }
 a:hover .image { border: 1px solid #F7AE00; }
 a:active .image { border: 1px solid #000000; }
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{	border: 5px solid blue; }
 .imageborder { border: 1px solid #000000; background-color:#000000; margin-top: 30px; margin-bottom: 30px; }
 .image1 { border: 1px solid #ff0000; }
 
@@ -609,10 +610,6 @@ a:hover {
 
 .image {
         margin: 2px;
-}
-
-img.middlethumb {
-    border: 5px solid blue;
 }
 
 .display_media {
