--- a/cpg1.5.x/themes/mac_ox_x/style.css
+++ b/cpg1.5.x/themes/mac_ox_x/style.css
@@ -84,6 +84,7 @@ a:visited .image { border: 1px solid #7F7F7F; }
 a:focus .image { border: 1px solid #000000; }
 a:hover .image { border: 1px solid #666666; }
 a:active .image { border: 1px solid #000000; }
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{	border: 5px solid blue; }
 
 .imageborder { border: 1px solid #000000; background-color: #FFFFFF; margin-top: 30px; margin-bottom: 30px; }
 
@@ -551,10 +552,6 @@ a:hover {
 
 .image {
         margin: 2px;
-}
-
-img.middlethumb {
-    border: 5px solid blue;
 }
 
 .display_media {
