--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -481,10 +481,6 @@ a:active {
         margin:2px;
 }
 
-img.middlethumb {
-    border: 5px solid blue;
-}
-
 /* pseudo-classes for image links */
 a:link .image{
         border-style:solid;
@@ -519,6 +515,11 @@ a:active .image{
         border-width:1px;
         border-color:#000000;
         margin:2px;
+}
+
+/* pseudo-classes for middlethumb links */
+a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
+		border: 5px solid blue;
 }
 
 .imageborder {
