Removed fixed width for admin menu items
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4183 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -459,7 +459,7 @@ a:active {
         margin-bottom: 1px;
         max-height:1.5em;
         overflow:hidden;
-        width:100px;
+        /*width:100px;*/
 }
 
 .admin_menu_wrapper {
