--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -452,7 +452,7 @@ a:hover {
         margin-bottom: 1px;
         max-height:1.5em;
         overflow:hidden;
-        width:100px;
+        /*width:100px;*/
 }
 
 #admin_menu_anim {
