--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -465,7 +465,7 @@ a:hover.yebg {
         margin-bottom: 1px;
         max-height:1.5em;
         overflow:hidden;
-        width:100px;
+        /*width:100px;*/
 }
 
 .admin_menu_wrapper {
