--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -467,7 +467,7 @@ a:hover {
         margin-bottom: 1px;
         max-height:1.5em;
         overflow:hidden;
-        width:100px;
+        /*width:100px;*/
 }
 
 .admin_menu_wrapper {
