Fixed improper CSS
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4216 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -201,7 +201,7 @@ ul {
         float:left;
         width:350px;
         margin-right:30px;
-        margin-top:5xp;
+        margin-top:5px;
         margin-bottom:30px;
         padding:2px;
         position:static;
@@ -399,7 +399,7 @@ dt {
         margin-left:20px;
 }
 
-. navlocator {
+.navlocator {
         font-size:0.8em;
         color: #0E72A4;
         font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
