Removed outdated FAQ items
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4217 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -368,7 +368,7 @@ a.external {
 
 .quote {
         color: #000000;
-        background-color: #C3B8D0;
+        background-color: #C7C7C7;
         border: 1px solid #000000;
         margin: 1px;
         padding: 1px;
