--- a/cpgdbal/docs/screen.css
+++ b/cpgdbal/docs/screen.css
@@ -22,6 +22,12 @@ html > body {
         margin: 10px 20px;
 }
 
+body {
+        font-size: .7em;
+        background: #F7F7F7;
+        margin: 10px 20px;
+}
+
 table {
         font-size: 1em;
 }
