--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -11,9 +11,9 @@
   ********************************************
   Coppermine version: 1.5.0
   $Source$
-  $Revision: 3405 $
-  $LastChangedBy: gaugau $
-  $Date: 2006-12-27 10:06:19 +0100 (Mi, 27 Dez 2006) $
+  $Revision$
+  $LastChangedBy$
+  $Date$
 **********************************************/
 
 html > body {
