Re-added broken reference to external links
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4515 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -322,7 +322,7 @@ a.content:hover {
 }
 
 a.external {
-        background: transparent url('pics/link.gif') 100% 50% no-repeat;
+        background: transparent url('images/link.gif') 100% 50% no-repeat;
         padding-right: 10px;
 }
 
