Cleaning up plugin documentation
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4526 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/style.css
+++ b/cpg1.5.x/docs/style.css
@@ -38,6 +38,10 @@ p {
         margin-bottom:0px;
 }
 
+.smallcode {
+        font-size: 0.9em;
+}
+
 .maintable {
         border: 1px solid #0E72A4;
         background-color: #efefef;
