--- a/cpg1.5.x/installer.css
+++ b/cpg1.5.x/installer.css
@@ -107,6 +107,7 @@ a:hover {
         padding-right: 10px;
         padding-bottom: 10px;
         padding-left: 10px;
+        border: 1px solid #0E72A4;
 }
 
 .updatesOK {
