--- a/cpg1.5.x/themes/mac_ox_x/style.css
+++ b/cpg1.5.x/themes/mac_ox_x/style.css
@@ -50,7 +50,7 @@ a,  .bblink a, .user_thumb_infobox a  { color: #000000; }
 
 a:hover, .bblink a:hover, .user_thumb_infobox a:hover, .alblink a:hover, .catlink a:hover { color : #666666; }
 
-.button, .comment_button, .admin_menu_thumb, .admin_menu_thumb a, .admin_menu_thumb a:hover, .admin_menu, .admin_menu a, .admin_menu a:hover { color : #000000; }
+.button, .comment_button, .admin_menu, .admin_menu a, .admin_menu a:hover { color : #000000; }
 
 .comment_date { color : #999999; }
 
@@ -76,7 +76,7 @@ body { background-color: #FAFAFA; }
 }
 
 /* Borders for input controls */
-.textinput, .listbox, .button, .comment_button, .admin_menu, .admin_menu_thumb  {        border: 1px solid #666666; }
+.textinput, .listbox, .button, .comment_button, .admin_menu  {        border: 1px solid #666666; }
 
 .image { border: 1px solid #000000; }
 a:link .image { border: 1px solid #000000; }
@@ -470,34 +470,6 @@ a:hover {
 .navmenu_pic {
         margin-top: 5px;
 }
-
-.admin_menu_thumb {
-        font-size: 90%;
-        background-image: url(images/button_bg.gif);
-        background-position: bottom;
-        font-weight: bold;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        width: 85px;
-}
-
-
-.admin_menu_thumb a {
-        text-decoration: none;
-        display: block;
-        position: relative;
-        padding-top: 1px;
-        padding-bottom: 1px;
-        padding-left: 10px;
-        padding-right: 10px;
-}
-
-
-
-.admin_menu_thumb a:hover {
-        text-decoration: underline;
-}
-
 
 .admin_menu {
         font-size: 90%;
