--- a/cpg1.5.x/themes/eyeball/style.css
+++ b/cpg1.5.x/themes/eyeball/style.css
@@ -53,7 +53,7 @@ a, .bblink a, .user_thumb_infobox a  { color: #447AC9; }
 
 a:hover, .bblink a:hover, .user_thumb_infobox a:hover { color : #0397FF; }
 
-.button, .comment_button, .admin_menu_thumb, .admin_menu_thumb a, .admin_menu_thumb a:hover, .admin_menu, .admin_menu a, .admin_menu a:hover { color : #FFFFFF; }
+.button, .comment_button, .admin_menu, .admin_menu a, .admin_menu a:hover { color : #FFFFFF; }
 
 .comment_date { color : #999999; }
 
@@ -80,7 +80,7 @@ body { background-color: #000000; }
 
 
 /* Borders for input controls */
-.textinput, .listbox, .button, .comment_button, .admin_menu, .admin_menu_thumb  {        border: 1px solid #666666; }
+.textinput, .listbox, .button, .comment_button, .admin_menu {        border: 1px solid #666666; }
 
 .image { border: 1px solid #FFFFFF; }
 
@@ -141,7 +141,7 @@ body { font-family: Arial, Helvetica, sans-serif; }
 
 .textinput, .listbox, .radio, .checkbox { font-family: Arial, Helvetica, sans-serif; }
 
-.button, .comment_button, .sortorder_options, .admin_menu_thumb { font-family: Arial, Helvetica, sans-serif; }
+.button, .comment_button, .sortorder_options, { font-family: Arial, Helvetica, sans-serif; }
 
 
 table {
@@ -511,35 +511,6 @@ a:hover {
 
 .navmenu a:hover {
         text-decoration: none;
-}
-
-
-.admin_menu_thumb {
-        font-size: 90%;
-        background-image: url(images/button_bg.gif);
-        background-position: bottom;
-
-        font-weight: bold;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        width: 85px;
-}
-
-
-.admin_menu_thumb a {
-        text-decoration: none;
-        display: block;
-        position: relative;
-        padding-top: 1px;
-        padding-bottom: 1px;
-        padding-left: 10px;
-        padding-right: 10px;
-}
-
-
-
-.admin_menu_thumb a:hover {
-        text-decoration: underline;
 }
 
 
