Aligning menu icons vertically
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4817 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -413,6 +413,10 @@ a:active {
         padding-right: 2px;
 }
 
+.admin_menu a img {
+		vertical-align:middle;
+}
+
 .admin_menu a:hover {
         color: #000000;
         text-decoration: underline;
