--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -485,7 +485,7 @@ a:active .image{
 
 /* pseudo-classes for middlethumb links */
 a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
-	border: 5px solid blue;
+	border: 4px solid #CBD7DE;
 }
 
 .imageborder {
@@ -707,6 +707,10 @@ div.social_bookmarks {
 }
 
 #cpgChooseThemeWrapper {
+}
+
+.filmstrip_background {
+	background-color:#000000;
 }
 
 .dtree {
