--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -505,7 +505,7 @@ a:active .image{
 
 /* pseudo-classes for middlethumb links */
 a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
-	border: 5px solid blue;
+	border: 4px solid #72767C;
 }
 
 .imageborder {
@@ -780,6 +780,10 @@ div.social_bookmarks {
 }
 
 #cpgChooseThemeWrapper {
+}
+
+.filmstrip_background {
+	background-color:#000000;
 }
 
 .dtree {
