--- a/cpg1.5.x/themes/mac_ox_x/style.css
+++ b/cpg1.5.x/themes/mac_ox_x/style.css
@@ -139,7 +139,7 @@ a:active .image {
 }
 
 a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
-	border: 5px solid blue; 
+	border: 3px solid #EFB45A; 
 }
 
 .imageborder { 
@@ -778,6 +778,10 @@ div.social_bookmarks {
 }
 
 #cpgChooseThemeWrapper {
+}
+
+.filmstrip_background {
+	background-color:#000000;
 }
 
 .dtree {
