--- a/cpg1.5.x/themes/project_vii/style.css
+++ b/cpg1.5.x/themes/project_vii/style.css
@@ -544,7 +544,7 @@ a:active .image{
 
 /* pseudo-classes for middlethumb links */
 a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlethumb,a:active .middlethumb{
-	border: 5px solid blue;
+	border: 2px solid blue;
 }
 
 .imageborder {
@@ -795,6 +795,10 @@ div.social_bookmarks {
 }
 
 #cpgChooseThemeWrapper {
+}
+
+.filmstrip_background {
+	background-color:#000000;
 }
 
 .dtree {
